@startuml

package core {
    class CrateFactory

    package persistence {
        interface IPersistenceService {
            + events
            getCrateId(): string
            canSetCrateId(): boolean
            setCrateId(id)
            createCrateServiceFor(id)
        }

        interface ICrateService {
            + events
            getMetadata()
            setMetadata()
        }

        note left
            if file service is available, this
            class must call file service methods.
            Otherwise, it is responsible for
            providing metadata without a file service.
        endnote

        interface IFileService {
            + events
            getContentList()
            getInfo(path)
            getFile(path)
            addFile(path, blob)
            addFolder(path)
            updateFile(path, blob)
            move(src, dst)
            delete(path)
            getStorageQuota()
        }

        interface IRepositoryService {
            + events
            getCratesList(): Promise<string>
            createCrateFromZip(zip)
            deleteCrate(crateId)
            getCrateAs(crateId, format)
            getStorageQuota()
        }

        note right
            Metadata-agnostic
        endnote

        note left of IPersistenceService
            invariant:
            getCrateId() == null
                equals getCrateService() == null
        end note

        ICrateService *-- "0..1" IFileService: fileService
        IPersistenceService *-- "0..1" ICrateService: crateService
        IPersistenceService *-- "0..1" IRepositoryService: repositoryService
    }



    CrateFactory ..> IRepositoryService: <<utilityFor>>
}

@enduml